--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "ramsey/uuid": "^4.2",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "tymon/jwt-auth": "^1.0",
         "yajra/laravel-datatables-oracle": "^9.0"
